--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Baohaus</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Baohaus Splash Screen</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <img src="assets/Background.png" class="bg" />
-    <img src="assets/Lanterns Left.png" class="lantern left animate-in" />
-    <img src="assets/Lanterns Right.png" class="lantern right animate-in" />
-    <img src="assets/Sign.png" class="sign animate-in" />
-    <img src="assets/Rocks Bottom.png" class="rocks animate-in" />
+    <img src="assets/Rocks Bottom.png" class="rocks" />
+    <img src="assets/Lanterns Left.png" class="lantern left" />
+    <img src="assets/Lanterns Right.png" class="lantern right" />
+    <img src="assets/Sign.png" class="sign" />
     <button id="enter-btn">Enter</button>
+    <audio id="bg-music" src="assets/audio/Baohaus Music Intro Screen.mp3" loop></audio>
   </div>
-
-  <audio id="bg-music" src="assets/audio/Baohaus Music Intro Screen.mp3" autoplay loop></audio>
   <script src="main.js"></script>
 </body>
 </html>
