--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Baohouse Intro</title>
   <link rel="stylesheet" href="styles.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Merienda+One&family=Yuji+Boku&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="intro-screen">
@@ -18,11 +19,19 @@
   </div>
 
   <div id="splash-screen" class="hidden">
-    <!-- Splash content will be faded in by JS -->
-    <!-- Placeholder for splash screen content -->
+    <div class="container">
+      <img src="assets/Background.png" class="bg" alt="background"/>
+      <img src="assets/Rocks Bottom.png" class="rocks" alt="rocks"/>
+      <img src="assets/Lanterns Left.png" class="lantern left" alt="lantern left"/>
+      <img src="assets/Lanterns Right.png" class="lantern right" alt="lantern right"/>
+      <div class="sign-wrapper">
+        <img src="assets/Sign.png" class="sign" alt="sign"/>
+        <button id="enter-btn">Enter</button>
+      </div>
+    </div>
   </div>
 
-  <audio id="bg-music" src="audio/Baohaus Music Intro Screen.mp3"></audio>
+  <audio id="bg-music" src="assets/audio/Baohaus Music Intro Screen copy.mp3"></audio>
   <script src="main.js"></script>
 </body>
 </html>
