--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Baohouse Intro</title>
+  <title>Baohaus Intro</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Merienda+One&family=Yuji+Boku&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Intro Screen -->
   <div id="intro-screen">
     <img src="assets/Intro screen logo.png" alt="Logo" id="intro-logo">
     <p class="main-text">Collect your first Dumpling Point to start</p>
@@ -18,6 +19,7 @@
     <p class="sub-text">You’ll see dumpling points at the top of the screen during your shift</p>
   </div>
 
+  <!-- Splash Screen -->
   <div id="splash-screen" class="hidden">
     <div class="container">
       <img src="assets/Background.png" class="bg" alt="background"/>
@@ -28,10 +30,11 @@
         <img src="assets/Sign.png" class="sign" alt="sign"/>
         <button id="enter-btn">Enter</button>
       </div>
+      <p class="hover-hint">Hover anywhere to start music</p>
     </div>
   </div>
 
-  <audio id="bg-music" src="assets/audio/Baohaus Music Intro Screen copy.mp3"></audio>
+  <audio id="bg-music" src="assets/audio/Baohaus Music Intro Screen copy.mp3" loop></audio>
   <script src="main.js"></script>
 </body>
 </html>
